# CS455---NEXA-travel-booking-app

./: .gitignore  README.md
nexa-backend/: .coveragerc  Airportslist.json  BusStopsList.json  Dockerfile  README.md  TrainStationsList.json  azure.yaml  celerybeat-schedule.db  docker-compose.yml  login_load_result_stats_history.csv  pyproject.toml  pytest.ini  requirements.txt  schema.yml  seeder.py
nexa-backend/Notifications/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
nexa-backend/adminanalytics/: serializers.py  urls.py  views.py
nexa-backend/agenticai/: Readme.md  apps.py  serializers.py  urls.py  utils.py  views.py
nexa-backend/analytics/: models.py  serializers.py  urls.py  views.py
nexa-backend/authapi/: authentication.py  models.py  readme.md  tasks.py  urls.py  utlis.py  views.py
nexa-backend/backend/: celery.py  settings.py  urls.py
nexa-backend/bookings/: Readme.md  agentic_view.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
nexa-backend/common/: fields.py
nexa-backend/forums/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
nexa-backend/load/: booking_payload.json  locust_booking.py  locust_login.py  login_payload.json
nexa-backend/payments/: Readme.md  models.py  serializers.py  urls.py  utils.py  views.py
nexa-backend/provideranalytics/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
nexa-backend/services/: Readme.md  models.py  serializers.py  urls.py  views.py
nexa-backend/user_management/: Readme.md  admin.py  models.py  permissions.py  urls.py  (+3 more)
(+444 files in other folders)
